[package]
name = "router-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
apollo-router = "1.24.0"
http = "0.2"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
